# dapper

./: DapperConfig.cmake  DapperConfigVersion.cmake  README.md
Components/: CPMIntegration.cmake
Examples/demo/: .gitignore  CMakeLists.txt  DependencyAwareness.cmake  DependencyAwareness.yml  DependencyAwareness.yml.in  DependencyAwarenessLock.yml  Hosts.cmake  sub-a  sub-b  sub-c
Examples/demo/sub-a/: v0.1.0.patch  v0.1.1.patch  v0.1.1.patch.in
Examples/demo/sub-b/: v0.1.0.patch  v0.1.1.patch  v0.1.1.patch.in  v0.1.2.patch  v0.1.2.patch.in
Examples/demo/sub-c/: v0.1.0.patch.in  v0.2.0.patch  v0.3.0.patch  v0.3.1.patch
Scripts/: ResolveDependencies.cmake
Tools/dappi/: CMakeLists.txt
Tools/dappi/src/: general_violation_counters.cpp  general_violation_counters.hpp  main.cpp  violation_counter_merger.cpp  violation_counter_merger.hpp  violation_counter_set.hpp
